--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -26,4 +26,23 @@ jobs:
       with:
         node-version: ${{ matrix.node-version }}
     - run: npm install
-    - run: npm run cypress:run:dash 
+    
+    # action especialmente para Cypress
+    - name: Cypress run
+    - uses: cypress-io/github-action@v2.8.2
+      with:
+        record: true
+        group: 'Semana Agilizei'
+      env:
+        # pass the Dashboard record key as an enviroment variable
+        CYPRESS_RECORD_KEY: ${{secrets.CYPRESS_RECORD_KEY}}
+        
+    # upload dos videos gerados
+    - name: Upload videos
+      uses: actions/upload-artifact@v2.2.0
+      if: always()
+      with:
+        name: videos
+        path: cypress/videos
+        
+      
